--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.7.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/vite": "^4.1.2",
     "aos": "^2.3.4",
     "apexcharts": "^4.4.0",
     "axios": "^1.7.3",
@@ -20,11 +22,13 @@
     "bootstrap": "^5.3.3",
     "bs-stepper": "^1.7.0",
     "choices.js": "^10.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "glightbox": "^3.3.0",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
+    "lucide-react": "^0.487.0",
     "plyr": "^3.7.7",
     "plyr-react": "^5.3.0",
     "quill-delta": "^5.1.0",
@@ -40,14 +44,17 @@
     "react-sticky-el": "^2.1.0",
     "simplebar-core": "^1.2.6",
     "simplebar-react": "^3.2.6",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.2",
     "tiny-slider": "^2.9.4",
+    "tw-animate-css": "^1.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/imagesloaded": "^4.1.6",
     "@types/isotope-layout": "^3.0.13",
-    "@types/node": "^22.0.2",
+    "@types/node": "^22.14.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
