--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.7.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.1.2",
     "aos": "^2.3.4",
     "apexcharts": "^4.4.0",
@@ -25,25 +27,29 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
+    "embla-carousel-react": "^8.6.0",
     "glightbox": "^3.3.0",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.487.0",
     "plyr": "^3.7.7",
     "plyr-react": "^5.3.0",
     "quill-delta": "^5.1.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
-    "react-bootstrap": "^2.10.7",
+    "react-bootstrap": "^2.10.9",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^6.26.0",
+    "react-stacked-center-carousel": "^1.0.14",
     "react-sticky-el": "^2.1.0",
     "simplebar-core": "^1.2.6",
     "simplebar-react": "^3.2.6",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
     "tiny-slider": "^2.9.4",
     "tw-animate-css": "^1.2.5",
