--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.7.0",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -33,6 +35,7 @@
     "isotope-layout": "^3.0.6",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.487.0",
+    "motion": "^12.6.3",
     "plyr": "^3.7.7",
     "plyr-react": "^5.3.0",
     "quill-delta": "^5.1.0",
@@ -50,7 +53,7 @@
     "simplebar-core": "^1.2.6",
     "simplebar-react": "^3.2.6",
     "swiper": "^11.2.6",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tiny-slider": "^2.9.4",
     "tw-animate-css": "^1.2.5",
     "yup": "^1.4.0"
