--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint src/**/*.{ts,tsx}",
+    "lint": "eslint .",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
     "preview": "vite preview",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
